--- a/index.html
+++ b/index.html
@@ -109,7 +109,10 @@ s
                         <i class="fas fa-envelope mail"></i> <span class="text-white text-mail">MAIL ME.</span>
                     </center>
                 </a>
-                <a href="mailto:bagusrahardjo6@gmail.com" class="mail-address" data-aos="fade-left">
+                <a href="mailto:bagusrahardjo6@gmail.com" class="mail-address d-sm-none d-md-block" data-aos="fade-left">
+                    bagusrahardjo6@gmail.com
+                </a>
+                <a href="mailto:bagusrahardjo6@gmail.com" class="mail-address2 d-block d-md-none" data-aos="fade-left">
                     bagusrahardjo6@gmail.com
                 </a>
             </div>
