--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/css/bootstrap.min.css" integrity="sha384-B0vP5xmATw1+K9KRQjQERJvTumQW0nPEzvF6L/Z6nronJ3oUOFUFpCjEUQouq2+l" crossorigin="anonymous">
     <link rel="stylesheet" href="assets/css/style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
+    <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/progressive-image.js/dist/progressive-image.css">
 
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
@@ -97,7 +98,7 @@ s
                     <img src="assets/images/bagus.png" alt="Foto Bagus Puji Rahardjo" class="img-fluid preview" data-aos="flip-left">
                 </a>
             </div>
-            <div class="col-md-9">
+            <div class="col-md-9" style="overflow-x: hidden">
                 <h1 class="text-custom text-white" data-aos="fade-down">I am a freelance Fullstack Web Developer.</h1>
                 <h2 class="paragraph-1 mt-4" data-aos="fade-down">
                     Hi, my name is Bagus Puji Rahardjo, I am an 8th semester student <br> majoring in Information System at Serang Raya University, also a freelance Fullstack Web Developer. Available for new projects.
@@ -121,7 +122,7 @@ s
     <div class="container">
         <div class="row mb-4" id="projects" style="height:50px;margin-top:30px;"></div>
         <div class="row">
-            <div class="col-12">
+            <div class="col-12" style="overflow-x: hidden">
                 <h1 class="text-custom text-white text-center" data-aos="fade-down">My Recent Projects</h1>
                 <h2 class="paragraph-1 mt-3 text-center" data-aos="fade-up">
                     Here are a few projects I've worked on recently.
@@ -228,7 +229,7 @@ s
             </div>
         </div>
         <div class="row">
-            <div class="col-12">
+            <div class="col-12" style="overflow-x: hidden">
                 <div class="card mt-4 radius" style="background-color:#272727;" data-aos="fade-down">
                     <div class="card-body radius" style="background-color:#272727;">
                         <h1 class="text-custom text-white text-center mt-2">Technologies</h1>
@@ -249,7 +250,7 @@ s
     <div class="container">
         <div class="row mb-4" id="contact" style="height:50px;margin-top:30px;"></div>
         <div class="row">
-            <div class="col">
+            <div class="col" style="overflow-x: hidden">
                 <h3 align="center" class="text-white heading" data-aos="fade-down">Start a project</h3>
                 <hr class="bg-white mt-0" data-aos="fade-down">
                 <p class="text-center text-custom2" data-aos="fade-down">
@@ -296,6 +297,7 @@ s
     <script src="assets/js/script.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js" integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
         (function() {
             window.onresize = displayWindowSize;
