--- a/index.html
+++ b/index.html
@@ -121,8 +121,8 @@ s
 
     <div class="container">
         <div class="row mb-4" id="projects" style="height:50px;margin-top:30px;"></div>
-        <div class="row">
-            <div class="col-12" style="overflow-x: hidden">
+        <div class="row" style="overflow-x: hidden">
+            <div class="col-12">
                 <h1 class="text-custom text-white text-center" data-aos="fade-down">My Recent Projects</h1>
                 <h2 class="paragraph-1 mt-3 text-center" data-aos="fade-up">
                     Here are a few projects I've worked on recently.
