--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@ s
                     <img src="assets/images/bagus.png" alt="Foto Bagus Puji Rahardjo" class="img-fluid preview" data-aos="flip-left">
                 </a>
             </div>
-            <div class="col-md-9" style="overflow-x: hidden">
+            <div class="col-md-9">
                 <h1 class="text-custom text-white" data-aos="fade-down">I am a freelance Fullstack Web Developer.</h1>
                 <h2 class="paragraph-1 mt-4" data-aos="fade-down">
                     Hi, my name is Bagus Puji Rahardjo, I am an 8th semester student <br> majoring in Information System at Serang Raya University, also a freelance Fullstack Web Developer. Available for new projects.
@@ -121,7 +121,7 @@ s
 
     <div class="container">
         <div class="row mb-4" id="projects" style="height:50px;margin-top:30px;"></div>
-        <div class="row" style="overflow-x: hidden">
+        <div class="row">
             <div class="col-12">
                 <h1 class="text-custom text-white text-center" data-aos="fade-down">My Recent Projects</h1>
                 <h2 class="paragraph-1 mt-3 text-center" data-aos="fade-up">
@@ -229,7 +229,7 @@ s
             </div>
         </div>
         <div class="row">
-            <div class="col-12" style="overflow-x: hidden">
+            <div class="col-12">
                 <div class="card mt-4 radius" style="background-color:#272727;" data-aos="fade-down">
                     <div class="card-body radius" style="background-color:#272727;">
                         <h1 class="text-custom text-white text-center mt-2">Technologies</h1>
@@ -247,10 +247,10 @@ s
         </div>
     </div>
 
-    <div class="container">
+    <div class="container" style="overflow-y:hidden;">
         <div class="row mb-4" id="contact" style="height:50px;margin-top:30px;"></div>
-        <div class="row">
-            <div class="col" style="overflow-x: hidden">
+        <div class="row" style="overflow-y:hidden;">
+            <div class="col" style="overflow-y:hidden;">
                 <h3 align="center" class="text-white heading" data-aos="fade-down">Start a project</h3>
                 <hr class="bg-white mt-0" data-aos="fade-down">
                 <p class="text-center text-custom2" data-aos="fade-down">
