--- a/index.html
+++ b/index.html
@@ -44,11 +44,7 @@
 
     <nav id="navbar2" class="navbar navbar-expand-md navbar-dark py-0">
         <div class="container">
-            <a href="http://portofolio.ukmkamus.com" class="navbar-brand my-2">
-                <img src="assets/images/web_dev.jpg" alt="WEB DEV" class="img-brand2">
-            </a>
-
-            <ul class="navbar-nav flex-row ml-auto justify-content-between" id="navbarNav">
+            <ul class="navbar-nav flex-row justify-content-between" id="navbarNav">
                 <li class="nav-item">
                     <a href="#top" class="nav-link mt-2 mr-4 active">TOP</a>
                 </li>
