--- a/index.html
+++ b/index.html
@@ -365,12 +365,14 @@ s
             if(currentScrollPos > 100) {
                 if(width > 767) {
                     navbar2.style.top = "0";
+                    navbar3.style.top ="-100px";
                 } else {
                     navbar3.style.top = "0";
                 }
             } else {
                 if(width > 767) {
                     navbar2.style.top = "-100px";
+                    navbar3.style.top ="-100px";
                 } else {
                     navbar3.style.top = "-100px";
                 }
