kampret salah lagi

--- a/index.html
+++ b/index.html
@@ -337,6 +337,7 @@ s
 
         $(document).ready(function() {
             var navbar2 = document.getElementById("navbar2");
+            var navbar3 = document.getElementById("navbar3");
             var currentScrollPos = window.pageYOffset;
             var width = window.innerWidth;
 
@@ -359,6 +360,7 @@ s
 
         window.onscroll = function() {
             var navbar2 = document.getElementById("navbar2");
+            var navbar3 = document.getElementById("navbar3");
             var currentScrollPos = window.pageYOffset;
             var width = window.innerWidth;
 
