--- a/index.html
+++ b/index.html
@@ -362,6 +362,7 @@ s
                     navbar2.style.top = "0";
                     navbar3.style.top ="-200px";
                 } else {
+                    navbar2.style.top = "-200px";
                     navbar3.style.top = "0";
                 }
             } else {
@@ -369,6 +370,7 @@ s
                     navbar2.style.top = "-100px";
                     navbar3.style.top ="-200px";
                 } else {
+                    navbar2.style.top = "-200px";
                     navbar3.style.top = "-200px";
                 }
             }
@@ -385,6 +387,7 @@ s
                     navbar2.style.top = "0";
                     navbar3.style.top ="-200px";
                 } else {
+                    navbar2.style.top = "-200px";
                     navbar3.style.top = "0";
                 }
             } else {
@@ -392,6 +395,7 @@ s
                     navbar2.style.top = "-100px";
                     navbar3.style.top ="-200px";
                 } else {
+                    navbar2.style.top = "-200px";
                     navbar3.style.top = "-200px";
                 }
             }
