--- a/index.html
+++ b/index.html
@@ -103,15 +103,17 @@ s
                 <h2 class="paragraph-1 mt-4" data-aos="fade-down">
                     Hi, my name is Bagus Puji Rahardjo, I am an 8th semester student <br> majoring in Information System at Serang Raya University, also a freelance Fullstack Web Developer. Available for new projects.
                 </h2>
-
-                <a href="mailto:bagusrahardjo6@gmail.com" class="btn btn-lg btn-mail mt-5" data-aos="fade-right">
-                    <center>
-                        <i class="fas fa-envelope mail"></i> <span class="text-white text-mail">MAIL ME.</span>
-                    </center>
-                </a>
-                <a href="mailto:bagusrahardjo6@gmail.com" class="mail-address" data-aos="fade-left">
-                    bagusrahardjo6@gmail.com
-                </a>
+                
+                <div class="btn-group">
+                    <a href="mailto:bagusrahardjo6@gmail.com" class="btn btn-lg btn-mail mt-5" data-aos="fade-right">
+                        <center>
+                            <i class="fas fa-envelope mail"></i> <span class="text-white text-mail">MAIL ME.</span>
+                        </center>
+                    </a>
+                    <a href="mailto:bagusrahardjo6@gmail.com" class="mail-address" data-aos="fade-left">
+                        bagusrahardjo6@gmail.com
+                    </a>
+                </div>
                 <a href="mailto:bagusrahardjo6@gmail.com" class="mail-address3" data-aos="fade-left">
                     bagusrahardjo6@gmail.com
                 </a>
