--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 
     <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/progressive-image.js/dist/progressive-image.js"></script>
+    <script src="assets/js/custom_script.js"></script>
 
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css?family=Montserrat:400,500,600,800&display=swap" rel="stylesheet">
@@ -114,6 +115,7 @@ s
                         bagusrahardjo6@gmail.com
                     </a>
                 </div>
+
                 <a href="mailto:bagusrahardjo6@gmail.com" class="mail-address3" data-aos="fade-left">
                     bagusrahardjo6@gmail.com
                 </a>
@@ -301,39 +303,6 @@ s
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.6.0/dist/js/bootstrap.min.js" integrity="sha384-+YQ4JLhjyBLPDQt//I+STsc9iw4uQqACwlvpslubQzn4u2UU2UFM80nGisd026JF" crossorigin="anonymous"></script>
     <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
     <script>
-        (function() {
-            window.onresize = displayWindowSize;
-            window.onload = displayWindowSize;
-
-            function displayWindowSize() {
-                let myWidth = window.innerWidth;
-
-                if (myWidth > 767) {
-                    $(".mail-address").css("display","block");
-                    $(".mail-address3").css("display","none");
-                    $("#top-link").removeClass("mt-3");
-                    $("#top-link").addClass("mt-4");
-                    $("#intro-link").removeClass("mt-3");
-                    $("#intro-link").addClass("mt-4");
-                    $("#project-link").removeClass("mt-3");
-                    $("#project-link").addClass("mt-4");
-                    $("#contact-link").removeClass("mt-3");
-                    $("#contact-link").addClass("mt-4");
-                } else {
-                    $(".mail-address").css("display","none");
-                    $(".mail-address3").css("display","block");
-                    $("#top-link").removeClass("mt-4");
-                    $("#top-link").addClass("mt-3");
-                    $("#intro-link").removeClass("mt-4");
-                    $("#intro-link").addClass("mt-3");
-                    $("#project-link").removeClass("mt-4");
-                    $("#project-link").addClass("mt-3");
-                    $("#contact-link").removeClass("mt-4");
-                    $("#contact-link").addClass("mt-3");
-                }
-            }
-        })();
-
         $(document).ready(function() {
             var navbar2 = document.getElementById("navbar2");
             var currentScrollPos = window.pageYOffset;
