--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@ s
                     </a>
                 </div>
 
-                <a href="mailto:bagusrahardjo6@gmail.com" class="mail-address3" data-aos="fade-left">
+                <a href="mailto:bagusrahardjo6@gmail.com" class="mail-address3" data-aos="fade-left" style="display:none;">
                     bagusrahardjo6@gmail.com
                 </a>
             </div>
