--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@ s
         <div class="row">
             <div class="col-md-3" data-aos="fade-down">
                 <a href="assets/images/bagus.png" class="progressive replace">
-                    <img src="assets/images/bagus.png" alt="Foto Bagus Puji Rahardjo" class="img-fluid preview" data-aos="flip-left">
+                    <img src="assets/images/bagus.png" alt="Foto Bagus Puji Rahardjo" class="img-fluid preview foto-pribadi" data-aos="flip-left">
                 </a>
             </div>
             <div class="col-md-9">
@@ -237,7 +237,7 @@ s
                 <div class="card mt-4 radius" style="background-color:#272727;" data-aos="fade-down">
                     <div class="card-body radius" style="background-color:#272727;">
                         <h1 class="text-custom text-white text-center mt-2">Technologies</h1>
-                        <img src="assets/images/html5.png" class="img-tech mb-2" alt="HTML5" data-aos="flip-left" style="margin-left:45px;">
+                        <img src="assets/images/HTML5.png" class="img-tech mb-2" alt="HTML5" data-aos="flip-left" style="margin-left:45px;">
                         <img src="assets/images/CSS3.png" class="img-tech mb-2" alt="CSS3" data-aos="flip-left" style="margin-left:30px;">
                         <img src="assets/images/php.png" class="img-tech mb-2" alt="PHP" data-aos="flip-left" style="margin-left:30px;">
                         <img src="assets/images/javascript.png" class="img-tech2 mb-2" alt="Javascript" data-aos="flip-left" style="margin-left:30px;">
