--- a/index.html
+++ b/index.html
@@ -96,7 +96,9 @@ s
         <div class="row">
             <div class="col-md-3" data-aos="fade-down">
                 <a href="assets/images/bagus.png" class="progressive replace">
-                    <img src="assets/images/bagus.png" alt="Foto Bagus Puji Rahardjo" class="img-fluid preview foto-pribadi" data-aos="flip-left">
+                    <center>
+                        <img src="assets/images/bagus.png" alt="Foto Bagus Puji Rahardjo" class="img-fluid preview foto-pribadi" data-aos="flip-left">
+                    </center>
                 </a>
             </div>
             <div class="col-md-9">
