--- a/index.html
+++ b/index.html
@@ -95,11 +95,14 @@ s
         <div class="row mb-4" id="intro" style="height:50px;"></div>
         <div class="row">
             <div class="col-md-3" data-aos="fade-down">
-                <center>
+                <center id="center-img" style="display:none">
                     <a href="assets/images/bagus.png" class="progressive replace">
                         <img src="assets/images/bagus.png" alt="Foto Bagus Puji Rahardjo" class="img-fluid preview foto-pribadi" data-aos="flip-left">
                     </a>
                 </center>
+                <a href="assets/images/bagus.png" class="progressive replace" id="img-bagus">
+                    <img src="assets/images/bagus.png" alt="Foto Bagus Puji Rahardjo" class="img-fluid preview foto-pribadi" data-aos="flip-left">
+                </a>
             </div>
             <div class="col-md-9">
                 <h1 class="text-custom text-white" data-aos="fade-down">I am a freelance Fullstack Web Developer.</h1>
