--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ s
                     Hi, my name is Bagus Puji Rahardjo, I am an 8th semester student <br> majoring in Information System at Serang Raya University, also a freelance Fullstack Web Developer. Available for new projects.
                 </h2>
                 
-                <div class="btn-group">
+                <div class="btn-group" id="btn-pc">
                     <a href="mailto:bagusrahardjo6@gmail.com" class="btn btn-lg btn-mail mt-5" data-aos="fade-right">
                         <center>
                             <i class="fas fa-envelope mail"></i> <span class="text-white text-mail">MAIL ME.</span>
@@ -121,9 +121,17 @@ s
                     </a>
                 </div>
 
-                <a href="mailto:bagusrahardjo6@gmail.com" class="mail-address3" data-aos="fade-left" style="display:none;">
-                    bagusrahardjo6@gmail.com
-                </a>
+                <center id="btn-mobile" style="display:none">
+                    <a href="mailto:bagusrahardjo6@gmail.com" class="btn btn-lg btn-mail mt-5" data-aos="fade-right">
+                        <center>
+                            <i class="fas fa-envelope mail"></i> <span class="text-white text-mail">MAIL ME.</span>
+                        </center>
+                    </a>
+
+                    <a href="mailto:bagusrahardjo6@gmail.com" class="mail-address3" data-aos="fade-left">
+                        bagusrahardjo6@gmail.com
+                    </a>
+                </center>
             </div>
         </div>
     </div>
