--- a/index.html
+++ b/index.html
@@ -122,13 +122,13 @@ s
                 </div>
 
                 <center id="btn-mobile" style="display:none">
-                    <a href="mailto:bagusrahardjo6@gmail.com" class="btn btn-lg btn-mail mt-3" data-aos="fade-right">
+                    <a href="mailto:bagusrahardjo6@gmail.com" class="btn btn-lg btn-mail mt-4 mb-4" data-aos="fade-right">
                         <center>
                             <i class="fas fa-envelope mail"></i> <span class="text-white text-mail">MAIL ME.</span>
                         </center>
                     </a>
 
-                    <a href="mailto:bagusrahardjo6@gmail.com" class="mail-address3 mt-3" data-aos="fade-left">
+                    <a href="mailto:bagusrahardjo6@gmail.com" class="mail-address3" data-aos="fade-left">
                         bagusrahardjo6@gmail.com
                     </a>
                 </center>
