--- a/index.html
+++ b/index.html
@@ -105,8 +105,8 @@ s
                 </a>
             </div>
             <div class="col-md-9">
-                <h1 class="text-custom text-white" data-aos="fade-down">I am a freelance Fullstack Web Developer.</h1>
-                <h2 class="paragraph-1 mt-4" data-aos="fade-down">
+                <h1 class="text-custom text-white text-1" data-aos="fade-down">I am a freelance Fullstack Web Developer.</h1>
+                <h2 class="paragraph-1 mt-4 text-2" data-aos="fade-down">
                     Hi, my name is Bagus Puji Rahardjo, I am an 8th semester student <br> majoring in Information System at Serang Raya University, also a freelance Fullstack Web Developer. Available for new projects.
                 </h2>
                 
