--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@ s
                     Hi, my name is Bagus Puji Rahardjo, I am an 8th semester student <br> majoring in Information System at Serang Raya University, also a freelance Fullstack Web Developer. Available for new projects.
                 </h2>
                 
-                <div class="btn-group" id="btn-pc">
+                <div class="btn-group btn-pc">
                     <a href="mailto:bagusrahardjo6@gmail.com" class="btn btn-lg btn-mail mt-5" data-aos="fade-right">
                         <center>
                             <i class="fas fa-envelope mail"></i> <span class="text-white text-mail">MAIL ME.</span>
@@ -121,7 +121,7 @@ s
                     </a>
                 </div>
 
-                <center id="btn-mobile" style="display:none">
+                <center class="btn-mobile" style="display:none">
                     <a href="mailto:bagusrahardjo6@gmail.com" class="btn btn-lg btn-mail mt-4 mb-4" data-aos="fade-right">
                         <center>
                             <i class="fas fa-envelope mail"></i> <span class="text-white text-mail">MAIL ME.</span>
@@ -276,12 +276,20 @@ s
                     Just ask.
                 </p>
                 
-                <div class="d-flex justify-content-center" style="margin-top:40px;">
+                <div class="d-md-flex justify-content-center" style="margin-top:40px;display:none;">
                     <a href="mailto:bagusrahardjo6@gmail.com" class="btn-chat text-center" data-aos="flip-right"><i class="fas fa-envelope mail"></i> <span class="text-msg">Message Me</span></a>
                     <a href="mailto:bagusrahardjo6@gmail.com" class="mail-address2 mt-3 ml-3" data-aos="fade-left">
                         bagusrahardjo6@gmail.com
                     </a>
                 </div>
+
+                <center class="btn-mobile" style="margin-top:50px;display:none;">
+                    <a href="mailto:bagusrahardjo6@gmail.com" class="btn btn-chat text-center mb-3" data-aos="flip-right"><i class="fas fa-envelope mail"></i> <span class="text-msg">Message Me</span></a>
+
+                    <a href="mailto:bagusrahardjo6@gmail.com" class="mail-address2" data-aos="fade-left">
+                        bagusrahardjo6@gmail.com
+                    </a>
+                </center>
             </div>
         </div>
     </div>
