--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="https://unpkg.com/aos@2.3.1/dist/aos.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/progressive-image.js/dist/progressive-image.css">
 
-    <script src="https://code.jquery.com/jquery-2.2.4.min.js"></script>
+    <script src="assets/js/jquery-2.2.4.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/progressive-image.js/dist/progressive-image.js"></script>
     <script defer src="assets/js/custom_script.js"></script>
 
