--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@ s
             <div class="col-md-9">
                 <h1 class="text-custom text-white text-1" data-aos="fade-down">I am a freelance Fullstack Web Developer.</h1>
                 <h2 class="paragraph-1 mt-4 text-2" data-aos="fade-down">
-                    Hi, my name is Bagus Puji Rahardjo, I am an 8th semester student <br> majoring in Information System at Serang Raya University, also a freelance Fullstack Web Developer. Available for new projects.
+                    Hi, my name is Bagus Puji Rahardjo. I currently working as a Fullstack Web Developer at PT KB Insurance Indonesia and am also a freelance Fullstack Web Developer. I have a bachelor's degree in Information System from Serang Raya University. Available for new projects.
                 </h2>
                 
                 <div class="btn-group btn-pc">
@@ -145,7 +145,62 @@ s
                     Here are a few projects I've worked on recently.
                 </h2>
             </div>
+            <div class="col-md-4 mt-3" data-aos="fade-left">
+                <figure class="snip1104">
+                    <a href="assets/images/ebilling.jpg" class="progressive replace">
+                        <img src="assets/images/ebilling.jpg" class="preview" alt="E-billing (B2B)">
+                    </a>
+                    <figcaption>
+                        <h2>E-Billing <span>(B2B)</span></h2>
+                    </figcaption>
+                    <a href="https://ebilling.kbinsure.co.id/ebilling/login" class="link-image"></a>
+                </figure>
+            </div>
+            <div class="col-md-4 mt-3" data-aos="fade-up">
+                <figure class="snip1104 blue">
+                    <a href="assets/images/inatrade.jpg" class="progressive replace">
+                        <img src="assets/images/inatrade.jpg" class="preview" alt="INATRADE (B2G)">
+                    </a>
+                    <figcaption>
+                        <h2>INATRADE <span>(B2G)</span></h2>
+                    </figcaption>
+                    <a href="https://ebusiness.kbinsure.co.id/portal/admin/login" class="link-image"></a>
+                </figure>
+            </div>
             <div class="col-md-4 mt-3" data-aos="fade-right">
+                <figure class="snip1104 blue">
+                    <a href="assets/images/iom.jpg" class="progressive replace">
+                        <img src="assets/images/iom.jpg" class="preview" alt="e-Internal Office Memo (e-IOM)">
+                    </a>
+                    <figcaption>
+                        <h2>e-Internal Office Memo <span>(e-IOM)</span></h2>
+                    </figcaption>
+                    <a href="javascript:" class="link-image"></a>
+                </figure>
+            </div>
+            <div class="col-md-4 mt-3" data-aos="fade-right">
+                <figure class="snip1104 red">
+                    <a href="assets/images/policy_service.jpg" class="progressive replace">
+                        <img src="assets/images/policy_service.jpg" class="preview" alt="Policy Service">
+                    </a>
+                    <figcaption>
+                        <h2>Policy <span>Service</span></h2>
+                    </figcaption>
+                    <a href="javascript:" class="link-image" target="_blank"></a>
+                </figure>
+            </div>
+            <div class="col-md-4 mt-3" data-aos="fade-down">
+                <figure class="snip1104 blue">
+                    <a href="assets/images/e_prs.jpg" class="progressive replace">
+                        <img src="assets/images/e_prs.jpg" class="preview" alt="Production Report System">
+                    </a>
+                    <figcaption>
+                        <h2>Production Report <span>System</span></h2>
+                    </figcaption>
+                    <a href="javascript:" class="link-image" target="_blank"></a>
+                </figure>
+            </div>
+            <div class="col-md-4 mt-3" data-aos="fade-left">
                 <figure class="snip1104 red">
                     <a href="assets/images/fti_fest.png" class="progressive replace">
                         <img src="assets/images/fti_fest.png" class="preview" alt="Contest Registration">
@@ -156,7 +211,7 @@ s
                     <a href="https://sekolah-vue.000webhostapp.com/" class="link-image" target="_blank"></a>
                 </figure>
             </div>
-            <div class="col-md-4 mt-3" data-aos="fade-down">
+            <div class="col-md-4 mt-3" data-aos="fade-left">
                 <figure class="snip1104 blue">
                     <a href="assets/images/sikolah.png" class="progressive replace">
                         <img src="assets/images/sikolah.png" class="preview" alt="School Management System">
@@ -167,7 +222,7 @@ s
                     <a href="https://sekolah-vue.000webhostapp.com/sikolah" class="link-image" target="_blank"></a>
                 </figure>
             </div>
-            <div class="col-md-4 mt-3" data-aos="fade-left">
+            <div class="col-md-4 mt-3" data-aos="fade-up">
                 <figure class="snip1104">
                     <a href="assets/images/hotel.png" class="progressive replace">
                         <img src="assets/images/hotel.png" class="preview" alt="Hotel Reservation">
@@ -178,7 +233,7 @@ s
                     <a href="javascript:" class="link-image"></a>
                 </figure>
             </div>
-            <div class="col-md-4 mt-3" data-aos="fade-left">
+            <div class="col-md-4 mt-3" data-aos="fade-right">
                 <figure class="snip1104">
                     <a href="assets/images/ecommerce.png" class="progressive replace">
                         <img src="assets/images/ecommerce.png" class="preview" alt="Ecommerce Store">
@@ -189,7 +244,7 @@ s
                     <a href="javascript:" class="link-image"></a>
                 </figure>
             </div>
-            <div class="col-md-4 mt-3" data-aos="fade-up">
+            <div class="col-md-4 mt-3" data-aos="fade-right">
                 <figure class="snip1104 red">
                     <a href="assets/images/sayur.png" class="progressive replace">
                         <img src="assets/images/sayur.png" class="preview" alt="Ecommerce (Vegetables)">
@@ -200,7 +255,7 @@ s
                     <a href="https://radjasayur.com" class="link-image" target="_blank"></a>
                 </figure>
             </div>
-            <div class="col-md-4 mt-3" data-aos="fade-right">
+            <div class="col-md-4 mt-3" data-aos="fade-down">
                 <figure class="snip1104 blue">
                     <a href="assets/images/pariwisata.png" class="progressive replace">
                         <img src="assets/images/pariwisata.png" class="preview" alt="Tourist Destination">
@@ -211,7 +266,7 @@ s
                     <a href="javascript:" class="link-image"></a>
                 </figure>
             </div>
-            <div class="col-md-4 mt-3" data-aos="fade-right">
+            <div class="col-md-4 mt-3" data-aos="fade-left">
                 <figure class="snip1104 blue">
                     <a href="assets/images/daftar_kamus.png" class="progressive replace">
                         <img src="assets/images/daftar_kamus.png" class="preview" alt="Organization Registration">
@@ -222,7 +277,7 @@ s
                     <a href="https://pendaftaran.ukmkamus.com" class="link-image" target="_blank"></a>
                 </figure>
             </div>
-            <div class="col-md-4 mt-3" data-aos="fade-down">
+            <div class="col-md-4 mt-3" data-aos="fade-left">
                 <figure class="snip1104">
                     <a href="assets/images/pkm.png" class="progressive replace">
                         <img src="assets/images/pkm.png" class="preview" alt="Workshop Registration">
@@ -233,7 +288,7 @@ s
                     <a href="https://pkm.ukmkamus.com" class="link-image" target="_blank"></a>
                 </figure>
             </div>
-            <div class="col-md-4 mt-3" data-aos="fade-left">
+            <div class="col-md-4 mt-3" data-aos="fade-up">
                 <figure class="snip1104 red">
                     <a href="assets/images/covid.png" class="progressive replace">
                         <img src="assets/images/covid.png" class="preview" alt="Covid-19 Education">
@@ -258,6 +313,12 @@ s
                         <img src="assets/images/Bootstrap.png" class="img-tech mb-2" alt="Bootstrap" data-aos="flip-left" style="margin-left:30px;">
                         <img src="assets/images/Codeigniter.png" class="img-tech mb-2" alt="CodeIgniter" data-aos="flip-left" style="margin-left:30px;">
                         <img src="assets/images/Larevel.png" class="img-tech mb-2" alt="Laravel" data-aos="flip-left" style="margin-left:30px;">
+                        <img src="assets/images/mysql.png" class="img-tech mb-2" alt="MySQL" data-aos="flip-left" style="margin-left:45px;">
+                        <img src="assets/images/sql_srv.png" class="img-tech mb-2" alt="Microsoft SQL Server" data-aos="flip-left" style="margin-left:30px;">
+                        <img src="assets/images/react_js.png" class="img-tech mb-2" alt="React JS" data-aos="flip-left" style="margin-left:30px;">
+                        <img src="assets/images/vue_js.png" class="img-tech mb-2" alt="Vue JS" data-aos="flip-left" style="margin-left:30px;">
+                        <img src="assets/images/git.png" class="img-tech mb-2" alt="Git" data-aos="flip-left" style="margin-left:30px;">
+                        <img src="assets/images/github_logo.png" class="img-tech mb-2" alt="Github" data-aos="flip-left" style="margin-left:30px;">
                     </div>
                 </div>
             </div>
