--- a/index.html
+++ b/index.html
@@ -105,9 +105,9 @@ s
                 </a>
             </div>
             <div class="col-md-9">
-                <h1 class="text-custom text-white text-1" data-aos="fade-down">I am a freelance Fullstack Web Developer.</h1>
+                <h1 class="text-custom text-white text-1" data-aos="fade-down">I am a Fullstack Web Developer.</h1>
                 <h2 class="paragraph-1 mt-4 text-2" data-aos="fade-down">
-                    Hi, my name is Bagus Puji Rahardjo. I currently working as a Fullstack Web Developer at PT KB Insurance Indonesia and am also a freelance Fullstack Web Developer. I have a bachelor's degree in Information System from Serang Raya University. Available for new projects.
+                    Hi, my name is Bagus Puji Rahardjo. I currently working as a Software Engineer at PT Bayu Buana Tbk and am also a freelance Fullstack Web Developer. I have a bachelor's degree in Information System from Serang Raya University. Available for new projects.
                 </h2>
                 
                 <div class="btn-group btn-pc">
@@ -147,6 +147,50 @@ s
             </div>
             <div class="col-md-4 mt-3" data-aos="fade-left">
                 <figure class="snip1104">
+                    <a href="assets/images/train_ticketing.png" class="progressive replace">
+                        <img src="assets/images/train_ticketing.png" class="preview" alt="Train Ticketing System">
+                    </a>
+                    <figcaption>
+                        <h2>Train Ticketing System <span>(KAI)</span></h2>
+                    </figcaption>
+                    <a href="javascript:void(0)" class="link-image" target="_blank"></a>
+                </figure>
+            </div>
+            <div class="col-md-4 mt-3" data-aos="fade-up">
+                <figure class="snip1104">
+                    <a href="assets/images/hris.png" class="progressive replace">
+                        <img src="assets/images/hris.png" class="preview" alt="Human Resources Information System">
+                    </a>
+                    <figcaption>
+                        <h2>Human Resources Information System</h2>
+                    </figcaption>
+                    <a href="javascript:void(0)" class="link-image" target="_blank"></a>
+                </figure>
+            </div>
+            <div class="col-md-4 mt-3" data-aos="fade-right">
+                <figure class="snip1104 blue">
+                    <a href="assets/images/it_helpdesk.png" class="progressive replace">
+                        <img src="assets/images/it_helpdesk.png" class="preview" alt="IT Helpdesk">
+                    </a>
+                    <figcaption>
+                        <h2>IT Helpdesk</h2>
+                    </figcaption>
+                    <a href="javascript:void(0)" class="link-image" target="_blank"></a>
+                </figure>
+            </div>
+            <div class="col-md-4 mt-3" data-aos="fade-left">
+                <figure class="snip1104 blue">
+                    <a href="assets/images/payroll.png" class="progressive replace">
+                        <img src="assets/images/payroll.png" class="preview" alt="Payroll Information System">
+                    </a>
+                    <figcaption>
+                        <h2>Payroll Information System</h2>
+                    </figcaption>
+                    <a href="javascript:void(0)" class="link-image"></a>
+                </figure>
+            </div>
+            <div class="col-md-4 mt-3" data-aos="fade-up">
+                <figure class="snip1104">
                     <a href="assets/images/ebilling.jpg" class="progressive replace">
                         <img src="assets/images/ebilling.jpg" class="preview" alt="E-billing (B2B)">
                     </a>
@@ -156,7 +200,7 @@ s
                     <a href="https://ebusiness.kbinsure.co.id/ebilling/login" class="link-image" target="_blank"></a>
                 </figure>
             </div>
-            <div class="col-md-4 mt-3" data-aos="fade-up">
+            <div class="col-md-4 mt-3" data-aos="fade-right">
                 <figure class="snip1104 blue">
                     <a href="assets/images/inatrade.jpg" class="progressive replace">
                         <img src="assets/images/inatrade.jpg" class="preview" alt="INATRADE (B2G)">
@@ -178,7 +222,7 @@ s
                     <a href="javascript:" class="link-image"></a>
                 </figure>
             </div>
-            <div class="col-md-4 mt-3" data-aos="fade-right">
+            <div class="col-md-4 mt-3" data-aos="fade-down">
                 <figure class="snip1104 red">
                     <a href="assets/images/policy_service.jpg" class="progressive replace">
                         <img src="assets/images/policy_service.jpg" class="preview" alt="Policy Service">
@@ -189,7 +233,7 @@ s
                     <a href="javascript:" class="link-image" target="_blank"></a>
                 </figure>
             </div>
-            <div class="col-md-4 mt-3" data-aos="fade-down">
+            <div class="col-md-4 mt-3" data-aos="fade-left">
                 <figure class="snip1104 blue">
                     <a href="assets/images/e_prs.jpg" class="progressive replace">
                         <img src="assets/images/e_prs.jpg" class="preview" alt="Production Report System">
@@ -211,7 +255,7 @@ s
                     <a href="https://sekolah-vue.000webhostapp.com/" class="link-image" target="_blank"></a>
                 </figure>
             </div>
-            <div class="col-md-4 mt-3" data-aos="fade-left">
+            <div class="col-md-4 mt-3" data-aos="fade-up">
                 <figure class="snip1104 blue">
                     <a href="assets/images/sikolah.png" class="progressive replace">
                         <img src="assets/images/sikolah.png" class="preview" alt="School Management System">
@@ -222,7 +266,7 @@ s
                     <a href="https://sekolah-vue.000webhostapp.com/sikolah" class="link-image" target="_blank"></a>
                 </figure>
             </div>
-            <div class="col-md-4 mt-3" data-aos="fade-up">
+            <div class="col-md-4 mt-3" data-aos="fade-right">
                 <figure class="snip1104">
                     <a href="assets/images/hotel.png" class="progressive replace">
                         <img src="assets/images/hotel.png" class="preview" alt="Hotel Reservation">
@@ -244,7 +288,7 @@ s
                     <a href="javascript:" class="link-image"></a>
                 </figure>
             </div>
-            <div class="col-md-4 mt-3" data-aos="fade-right">
+            <div class="col-md-4 mt-3" data-aos="fade-down">
                 <figure class="snip1104 red">
                     <a href="assets/images/sayur.png" class="progressive replace">
                         <img src="assets/images/sayur.png" class="preview" alt="Ecommerce (Vegetables)">
@@ -255,7 +299,7 @@ s
                     <a href="https://radjasayur.com" class="link-image" target="_blank"></a>
                 </figure>
             </div>
-            <div class="col-md-4 mt-3" data-aos="fade-down">
+            <div class="col-md-4 mt-3" data-aos="fade-left">
                 <figure class="snip1104 blue">
                     <a href="assets/images/pariwisata.png" class="progressive replace">
                         <img src="assets/images/pariwisata.png" class="preview" alt="Tourist Destination">
@@ -311,6 +355,7 @@ s
                         <img src="assets/images/javascript.png" class="img-tech2 mb-2" alt="Javascript" data-aos="flip-left" style="margin-left:30px;">
                         <img src="assets/images/jQuery.png" class="img-tech mb-2" alt="jQuery" data-aos="flip-left" style="margin-left:30px;">
                         <img src="assets/images/Bootstrap.png" class="img-tech mb-2" alt="Bootstrap" data-aos="flip-left" style="margin-left:30px;">
+                        <img src="assets/images/tailwind.png" class="img-tech mb-2" alt="Tailwind CSS" data-aos="flip-left" style="margin-left:30px;">
                         <img src="assets/images/Codeigniter.png" class="img-tech mb-2" alt="CodeIgniter" data-aos="flip-left" style="margin-left:30px;">
                         <img src="assets/images/Larevel.png" class="img-tech mb-2" alt="Laravel" data-aos="flip-left" style="margin-left:30px;">
                         <img src="assets/images/mysql.png" class="img-tech mb-2" alt="MySQL" data-aos="flip-left" style="margin-left:45px;">
@@ -373,7 +418,7 @@ s
                     </center>
 
                     <p class="text-center mt-3">
-                        Copyright &copy; 2021 - Grow Up Developers (GUD)
+                        Copyright &copy; 2024 - Grow Up Developers (GUD)
                     </p>
                 </footer>
             </div>
